--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@hono/node-server": "^1.5.0",
     "@hono/vite-dev-server": "^0.4.1",
-    "hono": "^4.0.0-rc.3"
+    "hono": "^4.0.0-rc.3",
+    "jsx": "link:@types/hono/jsx",
+    "promiees": "link:node:fs/promiees"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20231218.0",
