--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "wrangler:deploy": "wrangler deploy --minify ./server/index.ts"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@hono/node-server": "^1.5.0",
-    "@hono/vite-dev-server": "^0.4.1",
     "hono": "^4.0.0-rc.3",
     "jsx": "link:@types/hono/jsx",
     "promiees": "link:node:fs/promiees"
