--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "hono-play-ground",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "description": "Hono Playground",
+  "license": "MIT",
+  "packageManager": "pnpm@8.6.2",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
