fix: add needs option on workflow

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -30,12 +30,14 @@ jobs:
         run: pnpm install
 
   build:
+    needs: setup
     runs-on: ubuntu-latest
     steps:
       - name: Build
         run: pnpm run build
 
   deploy:
+    needs: build
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
