--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,6 +33,10 @@ jobs:
     needs: setup
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install dependencies
+        run: pnpm install
       - name: Build
         run: pnpm run build
 
