--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "format": "eslint . --ext ts,tsx --fix --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
