--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.5.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "hono": "^4.0.0-rc.3",
     "jsx": "link:@types/hono/jsx",
-    "promiees": "link:node:fs/promiees"
+    "lucide-react": "^0.316.0",
+    "promiees": "link:node:fs/promiees",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20231218.0",
@@ -30,6 +35,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.33",
+    "shadcn-ui": "^0.8.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
