--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
-  "name": "hono-play-ground",
-  "private": true,
-  "version": "1.0.0",
-  "type": "module",
-  "description": "Hono Playground",
-  "license": "MIT",
-  "packageManager": "pnpm@8.6.2",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "format": "eslint . --ext ts,tsx --fix --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@hono/node-server": "^1.5.0",
-    "clsx": "^2.1.0",
-    "hono": "^4.0.0-rc.3",
-    "jsx": "link:@types/hono/jsx",
-    "promiees": "link:node:fs/promiees"
-  },
-  "devDependencies": {
-    "@cloudflare/workers-types": "^4.20231218.0",
-    "@types/node": "^20.11.9",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8",
-    "wrangler": "^3.22.0"
-  }
+    "name": "hono-play-ground",
+    "private": true,
+    "version": "1.0.0",
+    "type": "module",
+    "description": "Hono Playground",
+    "license": "MIT",
+    "packageManager": "pnpm@8.6.2",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "lint:fix": "eslint . --ext ts,tsx --fix --max-warnings 0",
+        "format": "prettier --write ./src/**/*.{js,ts,tsx,css,html}",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@hono/node-server": "^1.5.0",
+        "clsx": "^2.1.0",
+        "hono": "^4.0.0-rc.3",
+        "jsx": "link:@types/hono/jsx",
+        "promiees": "link:node:fs/promiees"
+    },
+    "devDependencies": {
+        "@cloudflare/workers-types": "^4.20231218.0",
+        "@types/node": "^20.11.9",
+        "@typescript-eslint/eslint-plugin": "^6.14.0",
+        "@typescript-eslint/parser": "^6.14.0",
+        "@vitejs/plugin-react-swc": "^3.5.0",
+        "autoprefixer": "^10.4.17",
+        "eslint": "^8.55.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.5",
+        "postcss": "^8.4.33",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5.2.2",
+        "vite": "^5.0.8",
+        "wrangler": "^3.22.0"
+    }
 }
