--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "devDependencies": {
         "@cloudflare/workers-types": "^4.20231218.0",
+        "@swc/wasm-web": "^1.3.107",
         "@types/node": "^20.11.9",
         "@typescript-eslint/eslint-plugin": "^6.14.0",
         "@typescript-eslint/parser": "^6.14.0",
