--- a/package.json
+++ b/package.json
@@ -15,13 +15,25 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@hono/node-server": "^1.5.0",
+        "@monaco-editor/react": "^4.6.0",
+        "@radix-ui/react-dropdown-menu": "^2.0.6",
+        "@radix-ui/react-label": "^2.0.2",
+        "@radix-ui/react-select": "^2.0.0",
+        "@radix-ui/react-slot": "^1.0.2",
+        "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "hono": "^4.0.0-rc.3",
-        "jsx": "link:@types/hono/jsx",
-        "promiees": "link:node:fs/promiees"
+        "lucide-react": "^0.319.0",
+        "promiees": "link:node:fs/promiees",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-error-boundary": "^4.0.12",
+        "tailwind-merge": "^2.2.1",
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
+        "@babel/parser": "^7.23.9",
+        "@babel/traverse": "^7.23.9",
         "@cloudflare/workers-types": "^4.20231218.0",
         "@swc/wasm-web": "^1.3.107",
         "@types/node": "^20.11.9",
@@ -32,9 +44,11 @@
         "eslint": "^8.55.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
+        "monaco-jsx-highlighter": "^2.77.77",
         "postcss": "^8.4.33",
         "prettier": "^3.2.4",
         "prettier-plugin-tailwindcss": "^0.5.11",
+        "shadcn-ui": "^0.8.0",
         "tailwindcss": "^3.4.1",
         "typescript": "^5.2.2",
         "vite": "^5.0.8",
