--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@cloudflare/workers-types": "^4.20231218.0",
         "@swc/wasm-web": "^1.3.107",
         "@types/node": "^20.11.9",
+        "@types/react": "^18.2.48",
         "@typescript-eslint/eslint-plugin": "^6.14.0",
         "@typescript-eslint/parser": "^6.14.0",
         "@vitejs/plugin-react-swc": "^3.5.0",
