--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "@swc/wasm-web": "^1.3.107",
         "@types/node": "^20.11.9",
         "@types/react": "^18.2.48",
+        "@types/react-dom": "^18.2.18",
         "@typescript-eslint/eslint-plugin": "^6.14.0",
         "@typescript-eslint/parser": "^6.14.0",
         "@vitejs/plugin-react-swc": "^3.5.0",
