--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "tailwindcss": "^3.4.1",
         "typescript": "^5.2.2",
         "vite": "^5.0.8",
+        "vite-plugin-top-level-await": "^1.4.1",
         "wrangler": "^3.22.0"
     }
 }
