--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "eslint": "^8.55.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
+        "monaco-editor-textmate": "^4.0.0",
         "monaco-jsx-highlighter": "^2.77.77",
         "postcss": "^8.4.33",
         "prettier": "^3.2.4",
